--- a/ser_raw/Cargo.toml
+++ b/ser_raw/Cargo.toml
@@ -9,8 +9,9 @@ edition = "2021"
 ser_raw_derive = { path = "../ser_raw_derive", optional = true }
 
 [dev-dependencies]
-# Required for doctests
-num-bigint = "0.4.3"
+num-bigint = "0.4.3" # Required for doctests
+rand = "0.8.5"
+rand_pcg = "0.3.1"
 
 [features]
 default = ["derive"]
