--- a/ser_raw/Cargo.toml
+++ b/ser_raw/Cargo.toml
@@ -10,8 +10,8 @@ license = "MIT"
 [lib]
 
 [dependencies]
-ser_raw_derive = { path = "../ser_raw_derive", optional = true }
-ser_raw_derive_serializer = { path = "../ser_raw_derive_serializer" }
+ser_raw_derive = { version = "0.0.1", path = "../ser_raw_derive", optional = true }
+ser_raw_derive_serializer = { version = "0.0.1", path = "../ser_raw_derive_serializer" }
 
 [dev-dependencies]
 num-bigint = "0.4.3" # Required for doctests
