--- a/ser_raw/Cargo.toml
+++ b/ser_raw/Cargo.toml
@@ -12,12 +12,15 @@ license = "MIT"
 [dependencies]
 ser_raw_derive = { version = "0.1.0", path = "../ser_raw_derive", optional = true }
 ser_raw_derive_serializer = { version = "0.1.0", path = "../ser_raw_derive_serializer" }
+num-bigint = { version = "0.4.3", optional = true }
 
 [dev-dependencies]
-num-bigint = "0.4.3" # Required for doctests
+ser_raw = { path = ".", features = ["default", "num_bigint"] }
+num-bigint = "0.4.3"
 rand = "0.8.5"
 rand_pcg = "0.3.1"
 
 [features]
 default = ["derive"]
 derive = ["dep:ser_raw_derive"]
+num_bigint = ["dep:num-bigint"]
